--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,30 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  height: 100vh;
+}
+
+main {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-container {
+  width: 70%;
+  border: 2px solid red;
+  height: 100%;
+}
+
+.bg-image-container {
+  width: 500px;
+  height: 100%;
+}
+
+.background-image {
+  width: 100%;
+  height: 100%;
+}
