--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,12 @@ form {
   margin-top: 20px;
 }
 
+.login-text {
+  text-decoration: none;
+  color: #596d48;
+  font-weight: bold;
+}
+
 .create-acc-btn {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #596d48;
